add_subdirectory(bootstrap)
add_subdirectory(sdram)
add_subdirectory(vera)
add_subdirectory(fatfs)
add_subdirectory(stsound)
add_subdirectory(picorv_dma/test)
add_subdirectory(picorv_dma)
add_subdirectory(usb_hid)
add_subdirectory(flashdrvr)
add_subdirectory(timer)
add_subdirectory(gpio)
add_subdirectory(uart)
add_subdirectory(riscv)
add_subdirectory(interrupts)

