add_subdirectory(bootstrap)
add_subdirectory(sdram)
add_subdirectory(vera)
add_subdirectory(sdspi)
add_subdirectory(fatfs)
add_subdirectory(stsound)
add_subdirectory(j1b_hal)
add_subdirectory(usb_hid)
add_subdirectory(flashdrvr)
add_subdirectory(timer)
add_subdirectory(gpio)
add_subdirectory(uart)
add_subdirectory(riscv)
add_subdirectory(interrupts)
add_subdirectory(i2c)
add_subdirectory(rtcc)
add_subdirectory(timelib)
add_subdirectory(embedded_cli)
add_subdirectory(peek_poke_cli)
add_subdirectory(ymodem)
add_subdirectory(ymodem_cli)
add_subdirectory(mem_fs_cli)
add_subdirectory(dfx)
add_subdirectory(arduino)
add_subdirectory(terminal)
add_subdirectory(forth_core)

